Add Discord.Net package to Core project

--- a/src/Volvox.Helios.Core/Volvox.Helios.Core.csproj
+++ b/src/Volvox.Helios.Core/Volvox.Helios.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="1.0.2" />
+  </ItemGroup>
+
 </Project>
