--- a/src/Volvox.Helios.Web/Volvox.Helios.Web.csproj
+++ b/src/Volvox.Helios.Web/Volvox.Helios.Web.csproj
@@ -18,4 +18,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Volvox.Helios.Core\Volvox.Helios.Core.csproj" />
+  </ItemGroup>
+
 </Project>
