--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "9a87a7f4-8431-46ec-bf0d-23fc93370ef3"
   }
 }
