--- a/src/Volvox.Helios.Core/Volvox.Helios.Core.csproj
+++ b/src/Volvox.Helios.Core/Volvox.Helios.Core.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.1" />
   </ItemGroup>
 </Project>
