- Simplified logic around UpdateUser --- Method does its own validation, let it handle it. - Added XML styled comments for Update/Announce functions. - Added brackets on single line conditions. --- Mostly a style choice, but eh? - Removed unused Token variable.

--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,5 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 /src/Volvox.Helios.Web/aws-beanstalk-tools-defaults.json
+.vscode/launch.json
+.vscode/tasks.json
