Add font-awesome Update Bootstrap version

--- a/src/Volvox.Helios.Web/bundleconfig.json
+++ b/src/Volvox.Helios.Web/bundleconfig.json
@@ -23,7 +23,8 @@
   {
     "outputFileName": "wwwroot/vendor.min.css",
     "inputFiles": [
-      "node_modules/bootstrap/dist/css/bootstrap.min.css"
+      "node_modules/bootstrap/dist/css/bootstrap.min.css",
+      "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     ],
     "minify": { "enabled": false }
   },
