--- a/src/Volvox.Helios.Web/package.json
+++ b/src/Volvox.Helios.Web/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "@fortawesome/fontawesome-free": "^5.1.1",
+    "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3"
   }
