--- a/src/Volvox.Helios.Core/Volvox.Helios.Core.csproj
+++ b/src/Volvox.Helios.Core/Volvox.Helios.Core.csproj
@@ -7,4 +7,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Volvox.Helios.Domain\Volvox.Helios.Domain.csproj" />
+    <ProjectReference Include="..\Volvox.Helios.Service\Volvox.Helios.Service.csproj" />
+  </ItemGroup>
 </Project>
