--- a/Tests/Tests.Integration/Tests.Integration.csproj
+++ b/Tests/Tests.Integration/Tests.Integration.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Volvox.Helios.Web\Volvox.Helios.Web.csproj" />
+    <ProjectReference Include="..\..\src\Volvox.Helios.Web\Volvox.Helios.Web.csproj" />
   </ItemGroup>
 
 </Project>
