--- a/Tests/Tests.Unit/Tests.Unit.csproj
+++ b/Tests/Tests.Unit/Tests.Unit.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Volvox.Helios.Service\Volvox.Helios.Service.csproj" />
+    <ProjectReference Include="..\..\src\Volvox.Helios.Service\Volvox.Helios.Service.csproj" />
   </ItemGroup>
 
 </Project>
