Add default Discord settings to appsettings

--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -10,5 +10,10 @@
   },
   "ConnectionStrings": {
     "VolvoxHeliosDatabase": "Server=(localdb)\\mssqllocaldb;Database=VolvoxHelios;Trusted_Connection=True;"
+  },
+  "Discord": {
+    "Token": "",
+    "ClientID": "",
+    "ClientSecret": ""
   }
 }
