Add default values to Discord configuration

--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -12,8 +12,8 @@
     "VolvoxHeliosDatabase": "Server=(localdb)\\mssqllocaldb;Database=VolvoxHelios;Trusted_Connection=True;"
   },
   "Discord": {
-    "Token": "",
-    "ClientID": "",
-    "ClientSecret": ""
+    "Token": "DiscordToken",
+    "ClientID": "DiscordClientId",
+    "ClientSecret": "DiscordClientSecret"
   }
 }
