--- a/src/Volvox.Helios.Domain/Volvox.Helios.Domain.csproj
+++ b/src/Volvox.Helios.Domain/Volvox.Helios.Domain.csproj
@@ -2,4 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
 </Project>
