--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -14,6 +14,6 @@
   "Discord": {
     "Token": "DiscordToken",
     "ClientID": "DiscordClientId",
-    "ClientSecret": "DiscordClientSecret",
+    "ClientSecret": "DiscordClientSecret"
   }
 }
