--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
 script:
 - dotnet build
 - dotnet test test/Tests.Unit/Tests.Unit.csproj
-- dotnet test test/Tests.Integration/Tests.Integration.csproj
+#- dotnet test test/Tests.Integration/Tests.Integration.csproj
