fixed a bug that caused the example command check to always fail

--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -21,7 +21,7 @@
     "VolvoxHeliosDatabase": "Server=(localdb)\\mssqllocaldb;Database=VolvoxHelios;Trusted_Connection=True;"
   },
   "Discord": {
-    "Token": "DiscordToken",
+    "Token": "NDcxNDQ4NTE5MzYzMDAyMzY4.Dmtvpg.FIQVz3MmepaoxWfY1TVBi5XSCqc",
     "ClientID": "DiscordClientId",
     "ClientSecret": "DiscordClientSecret"
   }
