Change default AWS logging to dev

--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AWS.Logging": {
     "Region": "us-east-2",
-    "LogGroup": "Volvox.Helios",
+    "LogGroup": "Volvox.Helios-dev",
     "LogLevel": {
       "Default": "Debug",
       "System": "Warning",
