--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -15,7 +15,7 @@
     }
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "9a87a7f4-8431-46ec-bf0d-23fc93370ef3"
+    "InstrumentationKey": ""
   },
   "ConnectionStrings": {
     "VolvoxHeliosDatabase": "Server=(localdb)\\mssqllocaldb;Database=VolvoxHelios;Trusted_Connection=True;"
