--- a/.editorconfig
+++ b/.editorconfig
@@ -113,7 +113,7 @@ dotnet_style_null_propagation = true:suggestion
 # https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference#implicit-and-explicit-types
 csharp_style_var_for_built_in_types = true:warning
 csharp_style_var_when_type_is_apparent = true:warning
-csharp_style_var_elsewhere = false:none
+csharp_style_var_elsewhere = true:warning
  
 # Expression-bodied members
 # https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference#expression_bodied_members
