Fix ModuleMetadata check Rename metadata to modulemetadata Add html_self_closing_bracket to editorconfig Add popper.js CDN to production Fix FontAwesome

--- a/.editorconfig
+++ b/.editorconfig
@@ -49,6 +49,7 @@ trim_trailing_whitespace = false
 [*.{htm,html,js,ts,tsx,css,sass,scss,less,svg,vue}]
 indent_size = 2
 insert_final_newline = true
+html_space_before_self_closing = true
  
 # Batch Files
 [*.{cmd,bat}]
