--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,5 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
+
+sonar.exclusions=src/Volvox.Helios.Web/wwwroot/lib
