--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,6 @@ sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=.
+sonar.sources=src
 
-sonar.exclusions=src/Volvox.Helios.Web/wwwroot/lib
+sonar.exclusions=src/Volvox.Helios.Web/wwwroot/lib/*
