--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,13 @@
-# must be unique in a given SonarQube instance
+# Project Info
 sonar.projectKey=Volvox.Helios
-# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=Volvox.Helios
 sonar.projectVersion=1.0
  
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# This property is optional if sonar.modules is set. 
+# Source Code
 sonar.sources=src
 
-sonar.exclusions=src/Volvox.Helios.Web/wwwroot/lib/*
+# Exclusions
+sonar.exclusions=src/Volvox.Helios.Web/wwwroot/lib/**/*
+
+# SCM
+sonar.scm.disabled=true
