--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=Volvox.Helios
 sonar.projectVersion=1.0
  
 # Source Code
-sonar.sources=src/**/*
+sonar.sources=.
 
 # Exclusions
 sonar.exclusions=src/Volvox.Helios.Web/wwwroot/lib/**/*
