--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ mono: none
 dotnet: 2.1
 install:
 - dotnet restore
+- dotnet tool install dotnet-sonarscanner
 script:
+- dotnet sonarscanner begin /k:"$SONAR_TOKEN"
 - dotnet build
 - dotnet test test/Tests.Unit/Tests.Unit.csproj
-- sonar-scanner
+- dotnet sonarscanner end
 #- dotnet test test/Tests.Integration/Tests.Integration.csproj
 addons:
   sonarcloud:
