--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: csharp
 dist: trusty
-mono: none
+mono: latest
 dotnet: 2.1
 install:
 - dotnet restore
 script:
+- mono ../tools/sonar/SonarQube.Scanner.MSBuild.exe begin /d:sonar.login=${SONAR_TOKEN} /d:sonar.host.url="https://sonarcloud.io"
 - dotnet build
 - dotnet test test/Tests.Unit/Tests.Unit.csproj
 - dotnet test test/Tests.Integration/Tests.Integration.csproj
+- mono ../tools/sonar/SonarQube.Scanner.MSBuild.exe end /d:sonar.login=${SONAR_TOKEN}
