--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -23,6 +23,7 @@
   "Discord": {
     "Token": "DiscordToken",
     "ClientID": "DiscordClientId",
-    "ClientSecret": "DiscordClientSecret"
+    "ClientSecret": "DiscordClientSecret",
+    "TestServerName" : "Filler"
   }
 }
