Change connection string to empty for travis-ci building

--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -18,7 +18,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "VolvoxHeliosDatabase": "Server=(localdb)\\mssqllocaldb;Database=VolvoxHelios;Trusted_Connection=True;"
+    "VolvoxHeliosDatabase": ""
   },
   "Discord": {
     "Token": "DiscordToken",
