--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -18,7 +18,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "VolvoxHeliosDatabase": ""
+    "VolvoxHeliosDatabase": "$DEV_CONNECTION_STRING"
   },
   "Discord": {
     "Token": "DiscordToken",
