--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -18,7 +18,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "VolvoxHeliosDatabase": "$DEV_CONNECTION_STRING"
+    "VolvoxHeliosDatabase": "Server=(localdb)\\mssqllocaldb;Database=VolvoxHelios;Trusted_Connection=True;"
   },
   "Discord": {
     "Token": "DiscordToken",
