--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -21,8 +21,8 @@
     "VolvoxHeliosDatabase": "Server=(localdb)\\mssqllocaldb;Database=VolvoxHelios;Trusted_Connection=True;"
   },
   "Discord": {
-    "Token": "DiscordToken",
-    "ClientID": "DiscordClientId",
-    "ClientSecret": "DiscordClientSecret"
+    "Token": "NDg0NTUzMTk0Mjc0MjkxNzUw.DohAZw.dPfP2X-zm8xcky2o3kea8HTKwd0",
+    "ClientID": "484553194274291750",
+    "ClientSecret": "6I8J71uXj7ftuG_H_Kp3ZHcC25n-XA6R"
   }
 }
