--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 sonar.sources=.
 
 # Exclusions
-sonar.exclusions=src/Volvox.Helios.Web/wwwroot/lib/**/*
+sonar.exclusions=src/Volvox.Helios.Web/wwwroot/lib/**/*,Volvox.Helios.Web/wwwroot/lib/**/*
 
 # SCM
 sonar.scm.disabled=true
