--- a/src/Volvox.Helios.Web/package.json
+++ b/src/Volvox.Helios.Web/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-free": "^5.3.1",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "typescript": "^3.1.3"
   }
 }
