--- a/src/Volvox.Helios.Web/Volvox.Helios.Web.csproj
+++ b/src/Volvox.Helios.Web/Volvox.Helios.Web.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Version>1.0.0</Version>
     <UserSecretsId>45e5b330-6506-4c0b-8aa6-6402838521f9</UserSecretsId>
     <ApplicationInsightsResourceId>/subscriptions/bd7d1cf3-1ec9-43b1-b7c9-35f9700cfaa8/resourcegroups/Volvox.Helios/providers/microsoft.insights/components/Volvox.Helios</ApplicationInsightsResourceId>
     <ApplicationInsightsAnnotationResourceId>/subscriptions/bd7d1cf3-1ec9-43b1-b7c9-35f9700cfaa8/resourcegroups/Volvox.Helios/providers/microsoft.insights/components/Volvox.Helios</ApplicationInsightsAnnotationResourceId>
