--- a/src/Volvox.Helios.Web/bundleconfig.json
+++ b/src/Volvox.Helios.Web/bundleconfig.json
@@ -24,7 +24,8 @@
     "outputFileName": "wwwroot/vendor.min.css",
     "inputFiles": [
       "node_modules/bootstrap/dist/css/bootstrap.min.css",
-      "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+      "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+      "node_modules/chosen-js/chosen.min.css"
     ],
     "minify": { "enabled": false }
   },
@@ -33,7 +34,8 @@
     "inputFiles": [
       "node_modules/jquery/dist/jquery.min.js",
       "node_modules/popper.js/dist/umd/popper.min.js",
-      "node_modules/bootstrap/dist/js/bootstrap.min.js"
+      "node_modules/bootstrap/dist/js/bootstrap.min.js",
+      "node_modules/chosen-js/chosen.jquery.min.js"
     ],
     "minify": { "enabled": false }
   }
