--- a/src/Volvox.Helios.Web/bundleconfig.json
+++ b/src/Volvox.Helios.Web/bundleconfig.json
@@ -25,7 +25,9 @@
     "inputFiles": [
       "node_modules/bootstrap/dist/css/bootstrap.min.css",
       "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-      "node_modules/chosen-js/chosen.min.css"
+      "node_modules/chosen-js/chosen.min.css",
+      "node_modules/devextreme/dist/css/dx.common.css",
+      "node_modules/devextreme/dist/css/dx.light.css"
     ],
     "minify": { "enabled": false, "adjustRelativePaths" : false }
   },
@@ -35,7 +37,8 @@
       "node_modules/jquery/dist/jquery.min.js",
       "node_modules/popper.js/dist/umd/popper.min.js",
       "node_modules/bootstrap/dist/js/bootstrap.min.js",
-      "node_modules/chosen-js/chosen.jquery.min.js"
+      "node_modules/chosen-js/chosen.jquery.min.js",
+      "node_modules/devextreme/dist/js/dx.all.js"
     ],
     "minify": { "enabled": false }
   }
