--- a/src/Volvox.Helios.Web/package.json
+++ b/src/Volvox.Helios.Web/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
-    "chosen-js": "^1.8.7"
+    "chosen-js": "^1.8.7",
+    "devextreme": "18.2.3"
   }
 }
