--- a/src/Volvox.Helios.Web/bundleconfig.json
+++ b/src/Volvox.Helios.Web/bundleconfig.json
@@ -29,7 +29,10 @@
       "node_modules/devextreme/dist/css/dx.common.css",
       "node_modules/devextreme/dist/css/dx.light.css"
     ],
-    "minify": { "enabled": false, "adjustRelativePaths" : false }
+    "minify": {
+      "enabled": false,
+      "adjustRelativePaths": false
+    }
   },
   {
     "outputFileName": "wwwroot/vendor.min.js",
