--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,9 @@ __pycache__/
 /src/Volvox.Helios.Web/aws-beanstalk-tools-defaults.json
 .vscode/launch.json
 .vscode/tasks.json
+
+# Volvox.Helios Specific
+src/Volvox.Helios.Web/wwwroot/vendor.min.css
+src/Volvox.Helios.Web/wwwroot/vendor.min.js
+src/Volvox.Helios.Web/wwwroot/css/site.min.css
+src/Volvox.Helios.Web/wwwroot/js/site.min.js
