--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: csharp
-os: linux
-dist: xenial
+dist: trusty
 mono: none
-dotnet: 2.1.101
+dotnet: 2.1
 install:
 - dotnet restore
 script:
