--- a/src/Volvox.Helios.Service/Volvox.Helios.Service.csproj
+++ b/src/Volvox.Helios.Service/Volvox.Helios.Service.csproj
@@ -16,6 +16,7 @@
     <Compile Remove="Migrations\20181002022633_ReminderChangeToLongId.cs" />
     <Compile Remove="Migrations\20181002022742_ReminderChangeToLongId.cs" />
     <Compile Remove="Migrations\20181002022927_ReminderModule.cs" />
+    <Compile Remove="Migrations\20190109043433_DadBotKey.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentCache" Version="4.0.0.2" />
