--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -5,6 +5,12 @@
       "Default": "Debug"
     }
   },
+  "ModuleSettings": {
+    "Dad": {
+      "DadName": "Volvox.Helios",
+      "MatchPattern": "^[iI]'*[mM]\\s+"
+    }
+  },
   "AWS.Logging": {
     "Region": "us-east-2",
     "LogGroup": "Volvox.Helios",
