--- a/src/Volvox.Helios.Web/package.json
+++ b/src/Volvox.Helios.Web/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {},
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
-    "bootstrap": "^4.1.3",
+    "bootstrap": ">=4.3.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "chosen-js": "^1.8.7",
