--- a/src/Volvox.Helios.Domain/Volvox.Helios.Domain.csproj
+++ b/src/Volvox.Helios.Domain/Volvox.Helios.Domain.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Discord.Net" Version="2.0.0-beta2-01024" />
+    <PackageReference Include="Discord.Net" Version="2.0.0" />
   </ItemGroup>
 </Project>
