Added Health Checks UI

--- a/src/Volvox.Helios.Web/appsettings.json
+++ b/src/Volvox.Helios.Web/appsettings.json
@@ -30,5 +30,15 @@
     "Token": "DiscordToken",
     "ClientID": "DiscordClientId",
     "ClientSecret": "DiscordClientSecret"
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Volvox.Helios",
+        "Uri": "http://localhost:InsertPortHere/health"
+      }
+    ],
+    "EvaluationTimeOnSeconds": "10",
+    "MinimumSecondsBetweenFailureNotifications" : "10"
   }
 }
